# bradlet-rust-practice

./: Cargo.toml  README.md
src/: helpers.rs  main.rs  models.rs  programs.rs
src/models/: displayable_object.rs  types.rs
src/programs/: program_displayable.rs  program_main.rs  program_med_mode.rs  program_my_macro.rs
